# quad-tree-zkproof

./: Cargo.toml  PROOF_RESULTS.MD  README.md  rust-toolchain.toml  setup.sh
core/: cargo.toml
core/src/: lib.rs
guest/: cargo.toml
guest/.cargo/: config.toml
guest/elf/: riscv32im-pico-zkvm-elf
guest/src/: getrandom_dummy.rs  main.rs
host/: cargo.toml  koch_proof.json  quad_proof.json
host/src/: main.rs  tests.rs
proof_output/: groth16_witness.json  proof.json  pv_file
reference/pico-main/: Cargo.toml  model.json
reference/pico-main/.github/workflows/: rust.yml
reference/pico-main/examples/: Cargo.toml
reference/pico-main/examples/aggregator/app/: Cargo.toml
reference/pico-main/examples/aggregator/app/elf/: riscv32im-pico-zkvm-elf
reference/pico-main/examples/aggregator/app/src/: main.rs
reference/pico-main/examples/aggregator/prover/: Cargo.toml
reference/pico-main/examples/aggregator/prover/src/: main.rs
reference/pico-main/examples/fibonacci/app/: Cargo.toml
reference/pico-main/examples/fibonacci/app/elf/: riscv32im-pico-zkvm-elf
reference/pico-main/examples/fibonacci/lib/: Cargo.toml
reference/pico-main/examples/fibonacci/prover/: Cargo.toml
reference/pico-main/examples/tendermint/app/: Cargo.toml
reference/pico-main/examples/tendermint/prover/: Cargo.toml
reference/pico-main/perf/: Cargo.toml
reference/pico-main/perf/bench_apps/: Cargo.toml
reference/pico-main/perf/bench_apps/reth-pico/: Cargo.toml
reference/pico-main/perf/bench_apps/reth-pico/src/: main.rs
reference/pico-main/perf/src/common/: bench_program.rs
reference/pico-main/scripts/benchmarks/: bench_all_with_vk.sh  bench_emu.sh  bench_fibonacci-300kn.sh  bench_reth-17106222.sh  test_e2e_reth-17106222.sh
reference/pico-main/sdk/cli/: Cargo.toml
reference/pico-main/sdk/cli/src/subcommand/: prove.rs
reference/pico-main/sdk/patch-libs/src/: io.rs  lib.rs  verify.rs
reference/pico-main/sdk/sdk/: Cargo.toml
reference/pico-main/sdk/sdk/src/: lib.rs  m31_client.rs  verify.rs
reference/pico-main/sdk/sdk/src/riscv_ecalls/: halt.rs  mod.rs  verify.rs
reference/pico-main/vm/: Cargo.toml
reference/pico-main/vm/examples/: test_e2e.rs  test_proverchain.rs  test_riscv.rs  test_simple_recursion.rs  toy_simple_machine.rs
reference/pico-main/vm/examples/common/: parse_args.rs
reference/pico-main/vm/examples/patch-testing/common/src/: lib.rs
reference/pico-main/vm/src/: lib.rs
reference/pico-main/vm/src/chips/chips/riscv_cpu/: constraints.rs  traces.rs
reference/pico-main/vm/src/chips/chips/riscv_global/: traces.rs
reference/pico-main/vm/src/chips/chips/syscall/: traces.rs
reference/pico-main/vm/src/chips/gadgets/: global_interaction.rs
reference/pico-main/vm/src/chips/gadgets/field/: field_op.rs
reference/pico-main/vm/src/compiler/: word.rs
reference/pico-main/vm/src/compiler/recursion/circuit/: merkle_tree.rs
reference/pico-main/vm/src/compiler/recursion/ir/: builder.rs
reference/pico-main/vm/src/compiler/riscv/disassembler/: elf.rs
reference/pico-main/vm/src/compiler/test_elf/: riscv32im-pico-poseidon2-elf
reference/pico-main/vm/src/configs/: config.rs
reference/pico-main/vm/src/emulator/: opts.rs  stdin.rs
reference/pico-main/vm/src/emulator/recursion/: public_values.rs
reference/pico-main/vm/src/emulator/recursion/emulator/: memory.rs
reference/pico-main/vm/src/emulator/riscv/: memory.rs  mod.rs  public_values.rs  record.rs  state.rs
reference/pico-main/vm/src/emulator/riscv/emulator/: instruction.rs  instruction_simple.rs  (+2 more)
reference/pico-main/vm/src/instances/machine/: combine.rs  compress.rs  convert.rs  deferred.rs  mod.rs
reference/pico-main/vm/src/machine/: estimator.rs  field.rs  keys.rs  logger.rs  mod.rs  proof.rs  utils.rs  witness.rs
reference/pico-main/vm/src/machine/builder/: base.rs
reference/pico-main/vm/src/machine/debug/: lookups.rs
reference/pico-main/vm/src/primitives/: mod.rs
reference/pico-main/vm/src/proverchain/: convert.rs  deferred.rs  riscv.rs
reference/pico-main/vm/src/thread/: channel.rs
(+34 files in other folders)
