[package]
name = "pico-example-fibonacci"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }


[dependencies]
pico-sdk = { path = "../../../sdk/sdk", default-features = false, features = ["bb"] }
alloy-sol-types = "0.8.0"
fibonacci-lib ={ path = "../lib"}