[package]
name = "reth-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-sdk.workspace = true
bincode = "1.3.3"
rsp-client-executor = { git = "https://github.com/brevis-network/rsp.git", rev="8c24ce6f9b8dc036c05ca6aef4b227fb660157f2" }
